<resources>
    <string name="app_name">BluTvClone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kesfet">Keşfet</string>
    <string name="arama">Arama</string>
    <string name="canli_tv">Canlı TV</string>
    <string name="hesabim">Hesabım</string>
    <string name="listem">Listem</string>
    <string name="dizi">Dizi</string>
    <string name="film">Film</string>
    <string name="discovery">discovery+</string>
    <string name="kids">Kids</string>
    <string name="hemen_izle">Hemen İzle</string>
    <string name="ızlemeye_devam_et">İzlemeye Devam Et</string>
    <string name="polisiye_ruzgari">Polisiye Rüzgarı</string>
</resources>